added pdf extracting endpoint
